services/downloads-standard/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: downloads-standard
spec:
  type: ClusterIP
  selector:
    app: bazarr
  ports:
  - port: 6767
    targetPort: 6767
    protocol: TCP
    name: http
